# youtube-analyer

./: .gitignore  README.md  constants.py  database.py  main.py  pyproject.toml  widgets.py  workers.py
icons/: youtube.icns
