[project]
name = "youtube-searcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.173.0",
    "google-auth-oauthlib>=1.2.2",
    "isodate>=0.7.2",
    "pillow>=11.2.1",
    "pyinstaller>=6.14.1",
    "pyside6>=6.9.1",
    "qtawesome>=1.4.0",
    "requests>=2.32.4",
]
